# Insightly

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: insightly-ci.yml
.streamlit/: config.toml
docs/: architecture.md  development.md  getting_started.md  usage.md
sample_data/: personal_finance.csv  sales_report.xlsx  survey_results.json
src/: analyzer.py  cleaner.py  loader.py  profiler.py  qa.py  reporter.py  theme.py  visualizer.py
tests/: test_analyzer.py  test_cleaner.py  test_loader.py  test_profiler.py  test_qa.py  test_reporter.py  test_visualizer.py
